--- a/framework/CorePlotWarnings.xcconfig
+++ b/framework/CorePlotWarnings.xcconfig
@@ -1,4 +1,4 @@
-GCC_TREAT_WARNINGS_AS_ERRORS = YES
+// GCC_TREAT_WARNINGS_AS_ERRORS = YES
 GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 CLANG_WARN_DOCUMENTATION_COMMENTS = YES
 GCC_WARN_SHADOW = YES
@@ -30,4 +30,4 @@ CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
 CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
 CLANG_WARN_OBJC_RECEIVER_WEAK = YES
 
-OTHER_CFLAGS = -Weverything -Wno-unused-parameter -Wno-undef -Wno-switch-enum -Wno-float-equal -Wno-padded -Wno-dollar-in-identifier-extension -Wno-custom-atomic-properties -Wno-gnu -Wno-assign-enum -Wno-pedantic -Wno-documentation -Wno-unknown-warning-option -Wno-cstring-format-directive -Wno-tautological-pointer-compare
+OTHER_CFLAGS = -Weverything -Wno-unused-parameter -Wno-undef -Wno-switch-enum -Wno-float-equal -Wno-padded -Wno-dollar-in-identifier-extension -Wno-custom-atomic-properties -Wno-gnu -Wno-assign-enum -Wno-pedantic -Wno-documentation -Wno-unknown-warning-option -Wno-cstring-format-directive -Wno-tautological-pointer-compare -w
